--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نظام استعلام عن الطالب</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+
 body {
   font-family: 'Cairo', sans-serif;
   direction: rtl;
@@ -63,7 +63,7 @@ button {
   background: #28a745;
   color: #fff;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.3s ease;
 }
 
 button:hover {
@@ -71,19 +71,18 @@ button:hover {
   transform: scale(1.05);
 }
 
-.forgot-btn {
-  background: transparent;
-  color: #007bff;
-  text-decoration: underline;
-  border: none;
-  cursor: pointer;
-  font-size: 13px;
+/* زر نسيت الكود */
+.forgot {
+  text-align: center;
   margin-top: 10px;
-  transition: color 0.3s;
 }
-
-.forgot-btn:hover {
-  color: #0056b3;
+.forgot a {
+  color: #007bff;
+  text-decoration: none;
+  font-size: 14px;
+}
+.forgot a:hover {
+  text-decoration: underline;
 }
 
 .year-label {
@@ -111,8 +110,11 @@ button:hover {
   border-radius: 15px;
   padding: 15px;
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+  font-family: 'Cairo', sans-serif;
   font-size: 14px;
   overflow-x: auto;
+  opacity: 0;
+  transform: translateY(30px);
 }
 
 .section h3 {
@@ -127,6 +129,40 @@ button:hover {
 .info { background: #007bff; }
 .finance { background: #28a745; }
 .notes { background: #dc3545; }
+
+/* قسم الدرجات */
+.grades {
+  background: #ffc107;
+  color: #000;
+  font-size: 13px;
+}
+.grades h3 {
+  font-size: 14px;
+  padding: 5px 0;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  color: #000;
+  background: #ffc107;
+}
+.grades table th, .grades table td {
+  font-size: 11px;
+  padding: 3px 2px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+th, td {
+  padding: 6px 4px;
+  text-align: right;
+  border: 1px solid #ddd;
+  word-wrap: break-word;
+}
+
+tr:hover { background-color: rgba(0,123,255,0.1); }
 
 .governance {
   margin-top: 20px;
@@ -146,6 +182,7 @@ button:hover {
 
 @media (max-width: 768px) {
   .input-group input { flex: 0 0 140px; }
+  th, td { font-size: 10px; padding:2px; }
   .container { grid-template-columns: 1fr; }
   .section { min-height: auto; }
 }
@@ -164,8 +201,8 @@ button:hover {
   <button onclick="searchStudent()">بحث</button>
 </div>
 
-<div style="text-align:center;">
-  <button class="forgot-btn" onclick="goToForgot()">نسيت الكود؟</button>
+<div class="forgot">
+  <a href="forgot.html">🔑 نسيت الكود؟</a>
 </div>
 
 <div class="year-label">العام الدراسي 2025-2026</div>
@@ -175,23 +212,10 @@ button:hover {
   قسم الحوكمة: جميع الحقوق محفوظة © ثانوية التحدي الأهلية
 </div>
 
+<!-- GSAP animation library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
 <script>
-function goToForgot(){
-  gsap.to("body", {
-    opacity: 0,
-    duration: 0.5,
-    onComplete: ()=>window.location.href = "forgot.html"
-  });
-}
-
-// تأثيرات دخول الصفحة
-window.addEventListener("DOMContentLoaded", ()=>{
-  gsap.from("header", {y:-100, opacity:0, duration:1});
-  gsap.from(".input-group", {y:50, opacity:0, duration:1, delay:0.5});
-  gsap.from(".forgot-btn", {scale:0, opacity:0, duration:1, delay:1});
-  gsap.from(".governance", {y:100, opacity:0, duration:1, delay:1.3});
-});
-
 async function searchStudent(saveToStorage=true){
   let code = document.getElementById("studentCode").value.trim();
   let parent = document.getElementById("parentNumber").value.trim();
@@ -230,25 +254,71 @@ async function searchStudent(saveToStorage=true){
     if(!student){ output.innerHTML="<p style='color:#dc3545; text-align:center;'>❌ لم أجد بيانات تطابق البحث.</p>"; return; }
 
     let html="";
+
+    // المعلومات العامة
     html+=`<div class="section info"><h3>المعلومات العامة</h3><table>`;
     const studentFields=["id","رقم الطالب","اسم الطالب","الجنس","الصف","القاعة","رقم ولي الامر","رقم الخط","الملاحظات"];
-    for(let f of studentFields){ html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; }
+    for(let f of studentFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; }
     html+="</table></div>";
 
+    // المعلومات المالية
     html+=`<div class="section finance"><h3>المعلومات المالية</h3><table>`;
     const financeFields=["القسط 1","تاريخ 1","القسط 2","تاريخ 2","القسط 3","تاريخ 3","القسط 4","تاريخ 4","القسط 5","تاريخ 5","القسط 6","تاريخ 6","القسط 7","تاريخ 7","القسط 8","تاريخ 8","الباقي الكلي","المبلغ الكلي","الواصل الكلي","الكفالة","مبلغ الكفالة"];
-    for(let f of financeFields){ html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
+    for(let f of financeFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
+    html+="</table></div>";
+
+    // الدرجات التفصيلية لكل مادة
+    const subjectsColumns = {
+      "الاسلامية": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "عربي": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الانكليزي": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الرياضيات": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الكيمياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الفيزياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الاحياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"]
+    };
+
+    for(let subject in subjectsColumns){
+      html+=`<div class="section grades"><h3>الدرجات - ${subject}</h3><table><tr>`;
+      subjectsColumns[subject].forEach(colName=>{ html+=`<th>${colName}</th>`; });
+      html+="</tr><tr>";
+      subjectsColumns[subject].forEach(colName=>{ html+=`<td>${student[colName]||""}</td>`; });
+      html+="</tr></table></div>";
+    }
+
+    // الملاحظات
+    html+=`<div class="section notes"><h3>ملاحظات وغياب</h3><table>`;
+    const noteFields=["ملاحظات كرت","ملاحظات النتيجة","الغياب","اختلاق مشاكل داخل المدرسة"];
+    for(let f of noteFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
     html+="</table></div>";
 
     output.innerHTML = html;
 
-    // أنيميشن عرض النتائج
-    gsap.from(".section", {opacity:0, y:30, duration:0.6, stagger:0.2});
+    // تطبيق تأثيرات GSAP
+    gsap.from(".section", {
+      opacity: 0,
+      y: 40,
+      duration: 0.8,
+      stagger: 0.2,
+      ease: "power2.out"
+    });
+
   }catch(err){
     console.error(err);
     output.innerHTML = "<p style='color:#dc3545; text-align:center;'>❌ حدث خطأ أثناء جلب البيانات.</p>";
   }
 }
+
+// الاحتفاظ بالبيانات عند إعادة فتح الموقع
+window.addEventListener("DOMContentLoaded", ()=>{
+  const savedCode = localStorage.getItem("studentCode");
+  const savedParent = localStorage.getItem("parentNumber");
+  if(savedCode && savedParent){
+    document.getElementById("studentCode").value = savedCode;
+    document.getElementById("parentNumber").value = savedParent;
+    searchStudent(false);
+  }
+});
 </script>
 
 </body>
