--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@ button:hover {
   transform: scale(1.05);
 }
 
-/* زر نسيت الكود */
 #forgotBtn {
   background: #ffc107;
   color: #000;
 }
+
 #forgotBtn:hover {
   background: #e0a800;
   transform: scale(1.05);
@@ -149,6 +149,7 @@ th, td {
   padding: 6px 4px;
   text-align: right;
   border: 1px solid #ddd;
+  word-wrap: break-word;
 }
 
 tr:hover { background-color: rgba(0,123,255,0.1); }
@@ -177,7 +178,7 @@ tr:hover { background-color: rgba(0,123,255,0.1); }
 
 <div class="year-label">العام الدراسي 2025-2026</div>
 <div class="container" id="output"></div>
-<div class="version">الإصدار V0.1.3</div>
+<div class="version">الإصدار V0.2.4</div>
 <div class="governance">
   قسم الحوكمة: جميع الحقوق محفوظة © ثانوية التحدي الأهلية
 </div>
@@ -226,32 +227,50 @@ async function searchStudent(saveToStorage=true){
 
     let html="";
 
+    // المعلومات العامة
     html+=`<div class="section info"><h3>المعلومات العامة</h3><table>`;
     const infoFields=["id","رقم الطالب","اسم الطالب","الجنس","الصف","القاعة","رقم ولي الامر","رقم الخط"];
     for(let f of infoFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; }
     html+="</table></div>";
 
+    // المعلومات المالية
     html+=`<div class="section finance"><h3>المعلومات المالية</h3><table>`;
-    const financeFields=["القسط 1","تاريخ 1","القسط 2","تاريخ 2","القسط 3","تاريخ 3","القسط 4","تاريخ 4","الباقي الكلي","المبلغ الكلي","الواصل الكلي"];
-    for(let f of financeFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
+    const financeFields=header.filter(h=>h.includes("القسط") || h.includes("تاريخ") || h.includes("الباقي") || h.includes("المبلغ") || h.includes("الواصل") || h.includes("الكفالة"));
+    for(let f of financeFields){ html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
     html+="</table></div>";
 
-    const subjects = ["اسلامية","عربي","انكليزي","رياضيات","كيمياء","فيزياء","احياء","حاسوب"];
-    for(let subj of subjects){
-      const cols = header.filter(h=>h.startsWith(subj));
-      if(cols.length){
-        html+=`<div class="section grades"><h3>الدرجات - ${subj}</h3><table><tr>`;
-        cols.forEach(c=>html+=`<th>${c}</th>`); html+="</tr><tr>";
-        cols.forEach(c=>html+=`<td>${student[c]||""}</td>`); html+="</tr></table></div>";
-      }
+    // الدرجات التفصيلية لكل مادة
+    const subjectsColumns = {
+      "الاسلامية": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "عربي": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الانكليزي": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الرياضيات": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الكيمياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الفيزياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "الاحياء": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "اجتماعيات": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "حاسوب": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "رياضة": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "فنية": ["شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"],
+      "السلوك": ["سلوك شهر 1","شهر 2","فصل 1","نصف سنة","شهر 3","شهر 4","فصل 2","الامتحان النهائي","السعي","التقدير"]
+    };
+
+    for(let subject in subjectsColumns){
+      html+=`<div class="section grades"><h3>الدرجات - ${subject}</h3><table><tr>`;
+      subjectsColumns[subject].forEach(colName=>{ html+=`<th>${colName}</th>`; });
+      html+="</tr><tr>";
+      subjectsColumns[subject].forEach(colName=>{ html+=`<td>${student[colName]||""}</td>`; });
+      html+="</tr></table></div>";
     }
 
+    // الملاحظات
     html+=`<div class="section notes"><h3>ملاحظات وغياب</h3><table>`;
-    const noteFields=["الملاحظات","الغياب","اختلاق مشاكل داخل المدرسة"];
+    const noteFields=["ملاحظات كرت","ملاحظات النتيجة","الغياب","اختلاق مشاكل داخل المدرسة"];
     for(let f of noteFields){ if(header.includes(f)) html+=`<tr><th>${f}</th><td>${student[f]||""}</td></tr>`; }
     html+="</table></div>";
 
     output.innerHTML = html;
+
   }catch(err){
     console.error(err);
     output.innerHTML = "<p style='color:#dc3545; text-align:center;'>❌ حدث خطأ أثناء جلب البيانات.</p>";
