--- a/index.html
+++ b/index.html
@@ -1,67 +1,87 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>تسجيل الدخول - ثانوية التحدي</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>نظام استعلام عن الطالب - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="main.js" defer></script>
 </head>
 <body>
-  <div class="app">
-    <div class="app-header">
-      <h1>ثانوية التحدي</h1>
-      <p>منصة التحدي — الإصدار V1.4.2</p>
-    </div>
 
-    <div class="card" id="loginCard">
-      <div class="input-row">
-        <div class="field"><input id="parentInput" placeholder="رقم ولي الأمر" inputmode="numeric" /></div>
-        <div class="field"><input id="codeInput" placeholder="كود الطالب" /></div>
-      </div>
+<header>
+  🎓 ثانوية التحدي الأهلية
+  <span>العام الدراسي 2025-2026</span>
+</header>
 
-      <div style="margin-top:12px;text-align:center;">
-        <button class="btn primary" id="loginBtn">دخول</button>
-        <button class="btn ghost" id="forgotBtn" style="margin-right:10px">نسيت الكود؟</button>
-      </div>
-      <div id="loginMsg" class="note"></div>
-    </div>
-  </div>
+<div class="input-group">
+  <input id="parentNumber" placeholder="أدخل رقم ولي الأمر">
+  <input id="studentCode" placeholder="أدخل كود الطالب">
+  <button onclick="searchStudent()">بحث</button>
+  <button id="forgotBtn">نسيت الكود؟</button>
+</div>
 
-  <nav class="bottom-nav" aria-hidden="true">
-    <a class="nav-item" href="account.html"><svg viewBox="0 0 24 24" fill="none"><path d="M12 12a4 4 0 100-8 4 4 0 000 8zM4 20a8 8 0 0116 0" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الحساب</span></a>
-    <a class="nav-item" href="grades.html"><svg viewBox="0 0 24 24" fill="none"><path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الدرجات</span></a>
-    <a class="nav-item" href="notifications.html"><svg viewBox="0 0 24 24" fill="none"><path d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118.5 14.5V11a6.5 6.5 0 10-13 0v3.5c0 .538-.214 1.055-.595 1.445L3 17h5" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>التبليغات</span></a>
-    <a class="nav-item" href="chat.html"><svg viewBox="0 0 24 24" fill="none"><path d="M21 15a2 2 0 01-2 2H7l-4 4V5a2 2 0 012-2h14a2 2 0 012 2z" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الدردشة</span></a>
-  </nav>
+<div class="year-label">العام الدراسي 2025-2026</div>
+<div class="container" id="output"></div>
+<div class="version">الإصدار V0.2.4</div>
+<div class="governance">
+  قسم الحوكمة: جميع الحقوق محفوظة © ثانوية التحدي الأهلية
+</div>
 
 <script>
-document.addEventListener('DOMContentLoaded', ()=> {
-  gsap.to('#loginCard', {duration:0.75, opacity:1, y:0, ease:'power3.out'});
-});
+document.getElementById('forgotBtn').addEventListener('click', ()=> window.location.href='forgot.html');
 
-document.getElementById('forgotBtn').addEventListener('click', ()=> location.href='forgot.html');
+async function searchStudent(){
+  const codeEl = document.getElementById('studentCode');
+  const parentEl = document.getElementById('parentNumber');
+  let code = codeEl.value.trim();
+  let parent = parentEl.value.trim();
+  if(parent.startsWith('0')) parent = parent.substring(1);
+  if(code.startsWith('0')) code = code.substring(1);
 
-document.getElementById('loginBtn').addEventListener('click', async ()=>{
-  const parent = document.getElementById('parentInput').value.trim();
-  const code = document.getElementById('codeInput').value.trim();
-  const msg = document.getElementById('loginMsg');
-  if(!parent || !code){ msg.textContent = '⚠️ الرجاء إدخال رقم ولي الأمر وكود الطالب'; msg.className='error'; return; }
-  msg.textContent = '⏳ جاري التحقق...'; msg.className='note';
+  const output = document.getElementById('output');
+  if(!code || !parent){ output.innerHTML="<p style='color:#dc3545;text-align:center;'>⚠️ الرجاء إدخال جميع الحقول</p>"; return; }
+
+  output.innerHTML="<p style='text-align:center;'>⏳ جاري البحث...</p>";
 
   try{
-    const student = await window.PortalAPI.findByParentAndCode(parent, code);
-    if(!student){ msg.textContent = '❌ لم أجد بيانات مطابقة'; msg.className='error'; return; }
-    window.PortalAPI.saveSession(student);
-    msg.textContent = '✅ تم تسجيل الدخول';
-    msg.className = 'success';
-    setTimeout(()=> location.href = 'account.html', 600);
+    const student = await window.StudentPortal.findByParentAndCode(parent, code);
+    if(!student){ output.innerHTML="<p style='color:#dc3545;text-align:center;'>❌ لم أجد بيانات مطابقة</p>"; return; }
+
+    window.StudentPortal.saveSession(student);
+
+    let html="";
+    // مثال معلومات عامة
+    html+=`<div class="section info"><h3>المعلومات العامة</h3><table>`;
+    const infoFields=["id","رقم الطالب","اسم الطالب","الجنس","الصف","القاعة","رقم ولي الامر","رقم الخط"];
+    infoFields.forEach(f=>{ if(student[f]) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; });
+    html+="</table></div>";
+
+    // مثال ملاحظات
+    html+=`<div class="section notes"><h3>ملاحظات</h3><table>`;
+    const noteFields=["ملاحظات كرت","ملاحظات النتيجة","الغياب"];
+    noteFields.forEach(f=>{ if(student[f]) html+=`<tr><th>${f}</th><td>${student[f]}</td></tr>`; });
+    html+="</table></div>";
+
+    output.innerHTML = html;
+
   }catch(err){
     console.error(err);
-    msg.textContent = '❌ خطأ في الاتصال بقاعدة البيانات'; msg.className='error';
+    output.innerHTML="<p style='color:#dc3545;text-align:center;'>❌ حدث خطأ أثناء جلب البيانات</p>";
+  }
+}
+
+// استرجاع البيانات عند وجود جلسة محفوظة
+document.addEventListener('DOMContentLoaded', ()=>{
+  const s = window.StudentPortal.getSession();
+  if(s){
+    document.getElementById('studentCode').value = s['كود الطالب']||s['id']||'';
+    document.getElementById('parentNumber').value = s['رقم ولي الامر']||s['رقم ولي الأمر']||'';
+    searchStudent();
   }
 });
 </script>
+
 </body>
 </html>
