--- a/forgot.html
+++ b/forgot.html
@@ -1,64 +1,63 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نسيت الكود - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="main.js" defer></script>
 </head>
 <body>
-  <div class="app">
-    <div class="app-header"><h1>استرجاع الكود</h1><p>أدخل الاسم الرباعي ورقم ولي الأمر</p></div>
 
-    <div class="card" id="forgotCard">
-      <div class="input-row">
-        <div class="field"><input id="parentFld" placeholder="رقم ولي الأمر" inputmode="numeric" /></div>
-        <div class="field"><input id="nameFld" placeholder="الاسم الرباعي للطالب" /></div>
-      </div>
-      <div style="margin-top:12px;text-align:center;">
-        <button class="btn primary" id="searchBtn">البحث عن الكود</button>
-        <button class="btn ghost" id="backBtn">العودة</button>
-      </div>
-      <div id="resultArea" class="note"></div>
+<div class="app">
+  <div class="app-header"><h1>استرجاع الكود</h1><p>أدخل الاسم الرباعي ورقم ولي الأمر</p></div>
+
+  <div class="card" id="forgotCard">
+    <div class="input-row">
+      <div class="field"><input id="parentFld" placeholder="رقم ولي الأمر" /></div>
+      <div class="field"><input id="nameFld" placeholder="الاسم الرباعي للطالب" /></div>
     </div>
+    <div style="margin-top:12px;text-align:center;">
+      <button class="btn primary" id="searchBtn">البحث عن الكود</button>
+      <button class="btn ghost" id="backBtn">العودة</button>
+    </div>
+    <div id="resultArea" class="note"></div>
   </div>
-
-  <nav class="bottom-nav" aria-hidden="true">
-    <a class="nav-item" href="account.html"><svg viewBox="0 0 24 24" fill="none"><path d="M12 12a4 4 0 100-8 4 4 0 000 8zM4 20a8 8 0 0116 0" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الحساب</span></a>
-    <a class="nav-item" href="grades.html"><svg viewBox="0 0 24 24" fill="none"><path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الدرجات</span></a>
-    <a class="nav-item" href="notifications.html"><svg viewBox="0 0 24 24" fill="none"><path d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118.5 14.5V11a6.5 6.5 0 10-13 0v3.5c0 .538-.214 1.055-.595 1.445L3 17h5" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>التبليغات</span></a>
-    <a class="nav-item" href="chat.html"><svg viewBox="0 0 24 24" fill="none"><path d="M21 15a2 2 0 01-2 2H7l-4 4V5a2 2 0 012-2h14a2 2 0 012 2z" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg><span>الدردشة</span></a>
-  </nav>
+</div>
 
 <script>
-document.addEventListener('DOMContentLoaded', ()=> {
-  gsap.to('#forgotCard', {duration:0.75, opacity:1, y:0, ease:'power3.out'});
-});
+document.addEventListener('DOMContentLoaded', ()=>{ gsap.to('#forgotCard', {duration:0.75, opacity:1, y:0, ease:'power3.out'}); });
 document.getElementById('backBtn').addEventListener('click', ()=> location.href='index.html');
 
 document.getElementById('searchBtn').addEventListener('click', async ()=>{
   const parent = document.getElementById('parentFld').value.trim();
   const name = document.getElementById('nameFld').value.trim();
   const res = document.getElementById('resultArea');
-  if(!parent || !name){ res.textContent = '⚠️ الرجاء إدخال جميع الحقول'; res.className='error'; return; }
-  res.textContent = '⏳ جاري البحث...'; res.className='note';
+
+  if(!parent || !name){ res.textContent='⚠️ الرجاء إدخال جميع الحقول'; res.className='error'; return; }
+
+  res.textContent='⏳ جاري البحث...'; res.className='note';
+
   try{
-    const student = await window.PortalAPI.findByParentAndName(parent, name);
-    if(!student){ res.textContent = '❌ لم أجد بيانات مطابقة'; res.className='error'; return; }
-    const code = student['كود الطالب'] || student['كود'] || student['id'] || '—';
-    res.innerHTML = `✅ الكود: <strong>${code}</strong> <button class="btn ghost" id="copyBtn">نسخ</button>`;
-    document.getElementById('copyBtn').addEventListener('click', ()=> {
+    const student = await window.StudentPortal.findByParentAndName(parent, name);
+    if(!student){ res.textContent='❌ لم أجد بيانات مطابقة'; res.className='error'; return; }
+
+    const code = student['كود الطالب'] || student['id'] || '—';
+    res.innerHTML=`✅ الكود: <strong>${code}</strong> <button class="btn ghost" id="copyBtn">نسخ</button>`;
+
+    document.getElementById('copyBtn').addEventListener('click', ()=>{
       navigator.clipboard.writeText(code);
-      document.getElementById('copyBtn').textContent = 'تم النسخ';
-      setTimeout(()=> document.getElementById('copyBtn').textContent = 'نسخ', 1400);
+      document.getElementById('copyBtn').textContent='تم النسخ';
+      setTimeout(()=> document.getElementById('copyBtn').textContent='نسخ',1400);
     });
+
   }catch(err){
     console.error(err);
-    res.textContent = '❌ خطأ في البحث'; res.className='error';
+    res.textContent='❌ خطأ في البحث'; res.className='error';
   }
 });
 </script>
+
 </body>
 </html>
