--- a/forgot.html
+++ b/forgot.html
@@ -1,63 +1,49 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نسيت الكود - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="main.js" defer></script>
 </head>
 <body>
-
 <div class="app">
-  <div class="app-header"><h1>استرجاع الكود</h1><p>أدخل الاسم الرباعي ورقم ولي الأمر</p></div>
-
-  <div class="card" id="forgotCard">
-    <div class="input-row">
-      <div class="field"><input id="parentFld" placeholder="رقم ولي الأمر" /></div>
-      <div class="field"><input id="nameFld" placeholder="الاسم الرباعي للطالب" /></div>
-    </div>
-    <div style="margin-top:12px;text-align:center;">
-      <button class="btn primary" id="searchBtn">البحث عن الكود</button>
-      <button class="btn ghost" id="backBtn">العودة</button>
-    </div>
-    <div id="resultArea" class="note"></div>
+  <div class="app-header">
+    <h1>نسيت كود الطالب</h1>
+    <p>استعادة الكود عبر رقم ولي الأمر</p>
   </div>
+
+  <div class="input-row">
+    <div class="field"><input id="parentNumber" placeholder="أدخل رقم ولي الأمر"></div>
+    <button class="primary" onclick="recoverCode()">استعادة</button>
+    <button class="yellow" onclick="window.location.href='index.html'">عودة لتسجيل الدخول</button>
+  </div>
+
+  <div id="message" class="note"></div>
 </div>
 
+<nav class="bottom-nav">
+  <a href="account.html" class="nav-item"><span>الحساب</span></a>
+  <a href="grades.html" class="nav-item"><span>الدرجات</span></a>
+  <a href="notifications.html" class="nav-item"><span>التبليغات</span></a>
+</nav>
+
 <script>
-document.addEventListener('DOMContentLoaded', ()=>{ gsap.to('#forgotCard', {duration:0.75, opacity:1, y:0, ease:'power3.out'}); });
-document.getElementById('backBtn').addEventListener('click', ()=> location.href='index.html');
-
-document.getElementById('searchBtn').addEventListener('click', async ()=>{
-  const parent = document.getElementById('parentFld').value.trim();
-  const name = document.getElementById('nameFld').value.trim();
-  const res = document.getElementById('resultArea');
-
-  if(!parent || !name){ res.textContent='⚠️ الرجاء إدخال جميع الحقول'; res.className='error'; return; }
-
-  res.textContent='⏳ جاري البحث...'; res.className='note';
-
+async function recoverCode(){
+  const parent = document.getElementById('parentNumber').value.trim();
+  const msg = document.getElementById('message');
+  if(!parent){ msg.textContent="⚠️ الرجاء إدخال رقم ولي الأمر"; return; }
+  msg.textContent="⏳ جاري البحث...";
   try{
-    const student = await window.StudentPortal.findByParentAndName(parent, name);
-    if(!student){ res.textContent='❌ لم أجد بيانات مطابقة'; res.className='error'; return; }
-
-    const code = student['كود الطالب'] || student['id'] || '—';
-    res.innerHTML=`✅ الكود: <strong>${code}</strong> <button class="btn ghost" id="copyBtn">نسخ</button>`;
-
-    document.getElementById('copyBtn').addEventListener('click', ()=>{
-      navigator.clipboard.writeText(code);
-      document.getElementById('copyBtn').textContent='تم النسخ';
-      setTimeout(()=> document.getElementById('copyBtn').textContent='نسخ',1400);
-    });
-
-  }catch(err){
-    console.error(err);
-    res.textContent='❌ خطأ في البحث'; res.className='error';
+    const student = await PortalAPI.findByParentAndName(parent,"");
+    if(!student){ msg.textContent="❌ لم يتم العثور على بيانات"; return; }
+    msg.innerHTML = `✅ كود الطالب هو: <b>${student['كود الطالب']||student['كود']}</b>`;
+  }catch(e){
+    msg.textContent="❌ حدث خطأ أثناء الاتصال بالبيانات";
+    console.error(e);
   }
-});
+}
 </script>
-
 </body>
 </html>
