--- a/notifications.html
+++ b/notifications.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>التبليغات - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="main.js" defer></script>
 </head>
 <body>
-  <div class="app">
-    <div class="app-header"><h1>التبليغات</h1><p>الإشعارات والتنبيهات</p></div>
-    <div id="notifArea"></div>
+<div class="app">
+  <div class="app-header">
+    <h1>التبليغات</h1>
+    <p>الإشعارات والتنبيهات</p>
   </div>
 
-  <nav class="bottom-nav">
-    <a href="account.html">👤<span>الحساب</span></a>
-    <a href="grades.html">📚<span>الدرجات</span></a>
-    <a href="notifications.html" class="active">🔔<span>التبليغات</span></a>
-    <a href="chat.html">💬<span>الدردشة</span></a>
-  </nav>
+  <div id="notifArea" class="container">
+    <div class="card revealed"><h3>لا توجد تبليغات جديدة</h3><p class="note">ستظهر التبليغات هنا عند توفرها.</p></div>
+  </div>
+</div>
+
+<nav class="bottom-nav">
+  <a href="account.html" class="nav-item"><span>الحساب</span></a>
+  <a href="grades.html" class="nav-item"><span>الدرجات</span></a>
+  <a href="notifications.html" class="nav-item active"><span>التبليغات</span></a>
+</nav>
 
 <script>
 document.addEventListener('DOMContentLoaded', async ()=>{
-  if(!window.StudentPortal.requireLogin('index.html')) return;
+  if(!PortalAPI.requireLogin()) return;
   const area = document.getElementById('notifArea');
-
-  // مثال placeholder للتبليغات
-  area.innerHTML = `<div class="card revealed"><h3>لا توجد تبليغات جديدة</h3><p class="note">ستظهر التبليغات هنا عند توفرها.</p></div>`;
-  gsap.to('.card', {duration:0.7, opacity:1, y:0, ease:'power3.out'});
+  // يمكن لاحقاً جلب عمود التبليغات من Google Sheet
+  gsap.fromTo('.card',{opacity:0,y:20},{opacity:1,y:0,duration:0.7});
 });
 </script>
 </body>
