--- a/account.html
+++ b/account.html
@@ -6,42 +6,126 @@
 <title>الحساب - ثانوية التحدي</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="main.js" defer></script>
+<style>
+/* تصميم عام */
+body { font-family: 'Cairo', sans-serif; direction: rtl; margin:0; background: linear-gradient(180deg,#f7fbff,#ffffff);}
+.app { max-width: 980px; margin:24px auto 110px; padding:18px;}
+.app-header { text-align:center; margin-bottom:14px;}
+.app-header h1{margin:0; background:linear-gradient(90deg,#4f46e5,#0ea5e9); -webkit-background-clip:text; color:transparent; font-weight:800;}
+.app-header p { margin:8px 0 0 0; color:#6b7280; font-size:13px;}
+.card{background:#fff; border-radius:14px; padding:18px; box-shadow:0 12px 30px rgba(15,23,42,0.08); margin-bottom:14px; transform: translateY(18px); opacity:0; transition: transform .6s, opacity .6s;}
+input[type=text], input[type=number] { width:100%; padding:10px; border-radius:10px; border:1px solid #e6e9ef; margin-bottom:8px; }
+input:focus { outline:none; border-color:#4f46e5; box-shadow:0 8px 30px rgba(79,70,229,0.06);}
+button { padding:10px 18px; border-radius:10px; border:none; cursor:pointer; font-weight:800; margin-top:8px;}
+.btn-primary { background:linear-gradient(90deg,#4f46e5,#0ea5e9); color:#fff; }
+.btn-logout { background:#ef4444; color:#fff; }
+.section { margin-bottom:20px; }
+.section h3 { text-align:center; background:#4f46e5; color:#fff; padding:10px; border-radius:10px; margin-bottom:10px;}
+</style>
 </head>
 <body>
 <div class="app">
   <div class="app-header">
-    <h1>الحساب الشخصي</h1>
-    <p>بيانات الطالب الأساسية</p>
+    <h1>حساب الطالب</h1>
+    <p>عرض وتعديل البيانات الشخصية والمالية</p>
   </div>
 
-  <div id="accountData"></div>
+  <div class="card" id="accountCard">
+    <div id="infoSection" class="section">
+      <h3>معلومات الطالب</h3>
+      <div id="infoFields"></div>
+    </div>
+
+    <div id="financeSection" class="section">
+      <h3>المعلومات المالية</h3>
+      <div id="financeFields"></div>
+    </div>
+
+    <button class="btn btn-primary" id="saveBtn">💾 حفظ البيانات المعدلة</button>
+    <button class="btn btn-logout" id="logoutBtn">🚪 تسجيل الخروج</button>
+    <p id="statusMsg" style="text-align:center;margin-top:10px;"></p>
+  </div>
 </div>
 
 <nav class="bottom-nav">
-  <a href="account.html" class="nav-item active"><span>الحساب</span></a>
-  <a href="grades.html" class="nav-item"><span>الدرجات</span></a>
-  <a href="notifications.html" class="nav-item"><span>التبليغات</span></a>
+  <a href="account.html" class="active">👤<span>الحساب</span></a>
+  <a href="grades.html">📚<span>الدرجات</span></a>
+  <a href="notifications.html">🔔<span>التبليغات</span></a>
+  <a href="chat.html">💬<span>الدردشة</span></a>
 </nav>
 
 <script>
+const SHEET_API_URL = "YOUR_GOOGLE_SHEET_API_URL"; // ضع هنا رابط Google Apps Script
+
+async function fetchSheetData(){
+  const resp = await fetch(SHEET_API_URL, {cache:"no-store"});
+  if(!resp.ok) throw new Error("فشل في جلب البيانات من Google Sheets");
+  const json = await resp.json();
+  return json;
+}
+
+function getSession(){ return JSON.parse(sessionStorage.getItem('studentData')||'null'); }
+function saveSession(obj){ sessionStorage.setItem('studentData', JSON.stringify(obj)); }
+function requireLogin(){ if(!getSession()){ window.location.href='index.html'; return false;} return true; }
+
 document.addEventListener('DOMContentLoaded', async ()=>{
-  const student = PortalAPI.getSession();
-  const container = document.getElementById('accountData');
-  if(!student){ window.location.href='index.html'; return; }
+  if(!requireLogin()) return;
+  gsap.to('#accountCard', {duration:0.7, opacity:1, y:0, ease:'power3.out'});
 
-  let html=`<div class="card revealed">
-    <table>
-      <tr><th>الاسم</th><td>${student['اسم الطالب']}</td></tr>
-      <tr><th>الصف</th><td>${student['الصف']}</td></tr>
-      <tr><th>القاعة</th><td>${student['القاعة']}</td></tr>
-      <tr><th>رقم ولي الأمر</th><td>${student['رقم ولي الامر']}</td></tr>
-      <tr><th>رقم الخط</th><td>${student['رقم الخط']}</td></tr>
-    </table>
-  </div>`;
-  container.innerHTML = html;
+  const student = getSession();
+  const infoFieldsContainer = document.getElementById('infoFields');
+  const financeFieldsContainer = document.getElementById('financeFields');
 
-  gsap.fromTo('.card',{opacity:0,y:20},{opacity:1,y:0,duration:0.7});
+  // الحقول القابلة للتعديل
+  const editableFields = ['رقم الطالب','رقم ولي الامر','رقم الخط','المدرسة القادم منها','العنوان'];
+
+  // عرض معلومات الطالب
+  const infoFields = ["id","اسم الطالب","الصف","القاعة","الجنس","رقم ولي الامر","رقم الخط","الملاحظات","كود الطالب","رقم الطالب","الكتب","العنوان","اسم الام","المدرسة القادم منها","المعدل"];
+  infoFields.forEach(f=>{
+    const val = student[f]||'';
+    if(editableFields.includes(f)){
+      infoFieldsContainer.innerHTML += `<label>${f}:<input type="text" id="${f}" value="${val}"/></label>`;
+    } else {
+      infoFieldsContainer.innerHTML += `<p><strong>${f}:</strong> ${val}</p>`;
+    }
+  });
+
+  // عرض المعلومات المالية
+  const financeFields = ["القسط 1","تاريخ 1","القسط 2","تاريخ 2","القسط 3","تاريخ 3","القسط 4","تاريخ 4","القسط 5","تاريخ 5","القسط 6","تاريخ 6","القسط 7","تاريخ 7","القسط 8","تاريخ 8","الباقي الكلي","المبلغ الكلي","الواصل الكلي","الكفالة","مبلغ الكفالة"];
+  financeFields.forEach(f=>{
+    const val = student[f]||'';
+    financeFieldsContainer.innerHTML += `<p><strong>${f}:</strong> ${val}</p>`;
+  });
+
+  // حفظ البيانات المعدلة
+  document.getElementById('saveBtn').addEventListener('click', async ()=>{
+    const updatedData = {...student};
+    editableFields.forEach(f=>{ updatedData[f] = document.getElementById(f).value.trim(); });
+
+    // تحديث Google Sheet
+    try{
+      const resp = await fetch(SHEET_API_URL+"?action=update",{
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body: JSON.stringify(updatedData)
+      });
+      const result = await resp.json();
+      if(result.success){
+        saveSession(updatedData);
+        document.getElementById('statusMsg').textContent = '✅ تم حفظ البيانات بنجاح';
+      } else {
+        document.getElementById('statusMsg').textContent = '❌ حدث خطأ أثناء حفظ البيانات';
+      }
+    }catch(e){
+      console.error(e);
+      document.getElementById('statusMsg').textContent = '❌ حدث خطأ أثناء الحفظ';
+    }
+  });
+
+  document.getElementById('logoutBtn').addEventListener('click', ()=>{
+    sessionStorage.clear();
+    window.location.href='index.html';
+  });
 });
 </script>
 </body>
